# trading-bot-test

./: .gitignore  requirements.txt
api/: __main__.py  engine_controller.py  main.py  security.py
docs/: API_SPEC.md  RUN_GUIDE.md  V2_ARCHITECTURE.md  VERIFICATION.md
engine/: __init__.py  controller.py  (+1 more)
trading_bot_dan_v1/: .env.example  README.md  config.toml  pyproject.toml  requirements.txt  run.bat  run.sh
trading_bot_dan_v1/danbot/: __init__.py  main.py
trading_bot_dan_v1/danbot/backtest/: engine.py  loader.py  metrics.py  replay.py
trading_bot_dan_v1/danbot/core/: config.py  events.py  livelog.py  logging.py  presets.py  utils.py
trading_bot_dan_v1/danbot/data/: aggregations.py  candles.py  feature_engine.py  orderflow.py  tick_features.py
trading_bot_dan_v1/danbot/exchange/: adapter.py  binance_client.py  binance_endpoints.py  models.py  paper_sim.py  rest_client.py  ws_client.py
trading_bot_dan_v1/danbot/storage/: db.py  export.py  runtime_state.py  schema.sql
trading_bot_dan_v1/danbot/strategy/: execution.py  impulse_detector.py  reversal_strategy.py  risk.py  signals.py  spike_classifier.py  state_machine.py
trading_bot_dan_v1/danbot/tests/: test_config.py  test_execution.py  test_features.py  test_paper_sim.py  test_presets.py  test_rest_client.py  test_risk.py  test_state_machine.py
trading_bot_dan_v1/danbot/ui/: app.py  engine_worker.py  theme.py  theme.qss  viewmodels.py  widgets.py  widgets_glass.py
trading_bot_dan_v1/docs/: ARCHITECTURE.md  ROADMAP.md  VERIFICATION.md
trading_bot_dan_v1/scripts/: build_windows_exe.ps1
(+13 files in other folders)
