[project]
name = "trading-bot-dan-v1"
version = "1.0.0"
description = "Trading Bot Dan v1 - Binance Futures impulse lifecycle scalping bot"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.6",
  "websockets>=12.0",
  "aiohttp>=3.9",
  "PySide6>=6.7",
  "tomli>=2.0",
]

[project.optional-dependencies]
analysis = ["pandas>=2.0"]
dev = ["pytest>=8.0", "ruff>=0.5"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["danbot*"]

[tool.pytest.ini_options]
testpaths = ["danbot/tests"]
